--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name=".BookReportActivity"
             android:exported="true"
             android:theme="@style/Theme.MobileProgramming.NoActionBar" />
+        <activity
+            android:name=".QuizActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MobileProgramming.NoActionBar" />
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
