o,x 문제 랜덤으로 출제

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".QuizActivity"
             android:exported="true"
             android:theme="@style/Theme.MobileProgramming.NoActionBar" />
+        <activity
+            android:name=".QuizDetailActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MobileProgramming.NoActionBar" />
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
